test/src/e2e_vm_tests/test_programs/should_pass/language/break_and_continue/src/main.sw
script;

fn main() -> u64 {
    let m = 5;
    let mut i = 0;
    // Expand this example to have many nested loops
    while i < 10 {
        i += 1;
        if i > 5 {
            break;
        }
    }
    i // 6
}
